--- a/node-module-system/package.json
+++ b/node-module-system/package.json
@@ -5,7 +5,7 @@
   "main": "routes.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "Rodrigo Duarte",
   "license": "ISC",
